tests/negative/parser/if-semi.orng
fn main() -> Int {
    if let x = 4 true {}
    0
}